# forkairos

./: .cache_ecmwf_om.sqlite  .cache_gfs.sqlite  .cache_openmeteo.sqlite  LICENSE  README.md  check_grid.py  pyproject.toml  test_bc_era5_monthly.py  test_bias_correction.py  test_chm_vars.py  test_run.py  tmp.py
.cache_era5/: era5_cloud_cover_2024-06-01_2024-06-30.nc  era5_longwave_radiation_2024-06-01_2024-06-30.nc  era5_precipitation_2024-06-01_2024-06-03.nc  era5_precipitation_2024-06-01_2024-06-30.nc  era5_shortwave_radiation_2024-06-01_2024-06-30.nc  era5_snow_depth_2024-06-01_2024-06-30.nc  era5_snowfall_2024-06-01_2024-06-30.nc  era5_surface_pressure_2024-06-01_2024-06-30.nc  era5_temperature_2m_2024-06-01_2024-06-03.nc  era5_temperature_2m_2024-06-01_2024-06-30.nc  era5_temperature_2m_precipitation_2024-06-01_2024-06-03.nc  era5_temperature_2m_precipitation_snowfall_snow_depth_wind_u_10m_wind_v_10m_surface_pressure_shortwave_radiation_longwave_radiation_cloud_cover_2024-06-01_2024-06-30.nc  era5_wind_u_10m_2024-06-01_2024-06-30.nc  era5_wind_v_10m_2024-06-01_2024-06-30.nc
forkairos/: __init__.py  datasets.py  domain.py  pipeline.py  processing.py  vocabulary.py
forkairos/providers/: base.py  ecmwf_open.py  era5.py  gfs.py  open_meteo.py
outputs/: elyeso_ecmwf_forecast.nc  elyeso_era5_june2024.nc  elyeso_gfs_forecast.nc  elyeso_open_meteo_june2024.nc  test_elyeso.nc  test_elyeso_ecmwf.nc  test_elyeso_era5.nc  test_elyeso_gfs.nc
snowops/: __init__.py  domain.py  pipeline.py
snowops/providers/: base.py  ecmwf_open.py  era5.py  gfs.py  open_meteo.py
tests/: conftest.py  test_domain.py  test_processing.py
