[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "forkairos"
version = "0.1.2"
description = "Operational pipeline for meteorological forcing data in CF-compliant NetCDF"
readme = "README.md"
license = "MIT"
authors = [
    { name = "Cristóbal Reyes", email = "cristobal.sarda@gmail.com" }
]
keywords = ["hydrology", "meteorology", "NWP", "forcing", "NetCDF", "ERA5", "GFS", "ECMWF"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Atmospheric Science",
    "Topic :: Scientific/Engineering :: Hydrology",
]
requires-python = ">=3.12"
dependencies = [
    "xarray>=2024.1.0",
    "geopandas>=0.14.0",
    "netcdf4>=1.6.0",
    "requests>=2.31.0",
    "tqdm>=4.66.0",
    "pydantic>=2.0.0",
    "openmeteo-requests>=1.1.0",
    "requests-cache>=1.1.0",
    "retry-requests>=2.0.0",
    "cdsapi>=0.6.0",
    "cfgrib>=0.9.10",
    "scipy>=1.12.0",
    "numpy>=1.26.0",
    "pandas>=2.2.0",
    "ecmwf-opendata>=0.3.0",
]

[project.urls]
Homepage = "https://github.com/Jano01/forkairos"
Documentation = "https://forkairos.readthedocs.io"
Repository = "https://github.com/Jano01/forkairos"
Issues = "https://github.com/Jano01/forkairos/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["forkairos*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "credentials: tests that require external API credentials (deselect with -m 'not credentials')",
]